Fixed links not showing

--- a/src/index.css
+++ b/src/index.css
@@ -59,8 +59,8 @@ Global Styles
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: var(--clr-grey-10);
   color: var(--clr-grey-1);
   line-height: 1.5;
@@ -230,9 +230,8 @@ Jobs
 .job-info a {
   margin-right: 20px;
   font-size: 17px;
-  /* color: var(--clr-grey-3); */
-
-  color: var(--clr-primary-10);
+  color: var(--clr-grey-3);
+  /* color: var(--clr-primary-10); */
 }
 
 .job-info a:visited {
@@ -268,7 +267,6 @@ Jobs
 .job-icon {
   color: var(--clr-primary-5);
 }
-
 
 .img {
   /* border: 1px solid #000; */
@@ -336,4 +334,5 @@ Jobs
   background: var(--clr-primary-8);
 }
 
-.center-btn {}
+.center-btn {
+}
